tests/e2e/ranges7.error
Error: syntax error in story at line 3, column 1

3|    a = 0
      ^^^

E0100: Can't assign `int` to `List[int]`
